turtleart.lessons.turtleart.Main.Polygon7.scala.error
Source:4: error: type mismatch;
 found   : Double(51.42857142857143)
 required: Int
a=360.0/7;
       ^